--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ html, body {
     background: #fcfdfc;
     margin: 0;
     padding: 0;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
 
 a, a:visited {
